<resources>
    <string name="app_name">CS4099</string>
    <string name="welcome_message">Welcome! Tap anywhere to continue</string>
    <string name="button_view_data">View Data</string>
    <string name="button_sleep_entry">Sleep Entry</string>
    <string name="button_personal_details">View/Edit Personal Details</string>
    <string name="button_settings">Settings</string>
    <string name="button_info">App Information</string>
    <string name="button_view_raw_lock_data">View Raw Lock Data</string>
    <string name="button_view_graph_lock_data">View Graphed Lock Data</string>
    <string name="button_view_raw_user_sleep_data">View Raw Sleep Data</string>
    <string name="raw_lock_data">No Data Found</string>
    <string name="raw_user_sleep_data">No Data Found</string>
    <string name="refresh_button">Refresh</string>

    <string name="yesterday_date">Date Not Found</string>
    <string name="sleep_at">Fell asleep at - </string>
    <string name="edit_sleep_at_year">0000</string>
    <string name="edit_sleep_at_month">00</string>
    <string name="edit_sleep_at_day">00</string>
    <string name="edit_sleep_at_hour">00</string>
    <string name="edit_sleep_at_minute">00</string>
    <string name="sleep_until">Woke up at - </string>
    <string name="edit_sleep_until_year">0000</string>
    <string name="edit_sleep_until_month">00</string>
    <string name="edit_sleep_until_day">00</string>
    <string name="edit_sleep_until_hour">00</string>
    <string name="edit_sleep_until_minute">00</string>
    <string name="slept_for">You slept for 0 hours and 0 minutes</string>
    <string name="sleep_entry_invalid"> Invalid</string>
    <string name="button_submit_sleep_data">Submit</string>
    <string name="lock_graph">No Data Found.</string>

    <string name="personal_details_title">Please enter your personal details:</string>
    <string name="title_entry">Please Select Title</string>
    <string name="edit_name">Your Name</string>
    <string name="edit_email">Your Email</string>

    <string name="title1">Mr</string>
    <string name="title2">Ms</string>
    <string name="title3">Miss</string>
    <string name="title4">Mrs</string>
    <string name="title5">Dr</string>

    <string-array name="title_list">
        <item>@string/title1</item>
        <item>@string/title2</item>
        <item>@string/title3</item>
        <item>@string/title4</item>
        <item>@string/title5</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_user_entry">UserEntryActivity</string>
    <string name="title_activity_view_data">ViewDataActivity</string>
    <string name="title_activity_raw_data">RawDataActivity</string>
    <string name="title_activity_graph_data">GraphDataActivity</string>
    <string name="title_activity_view_raw_user_sleep_data">ViewRawUserSleepDataActivity</string>
    <string name="title_activity_personal_info">PersonalInfoActivity</string>
</resources>
