<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_user_entry"
    tools:context="uk.co.adamgrant.cs4099.UserEntryActivity">

    <TextView
        android:id="@+id/yesterday_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yesterday_date"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/sleep_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_at"/>
        <EditText android:id="@+id/edit_sleep_at_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/edit_sleep_at_hour"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"/>
        <EditText android:id="@+id/edit_sleep_at_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/edit_sleep_at_minute"
            />
        <TextView
            android:id="@+id/sleep_at_valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textColor="#d41243"
            android:text="@string/sleep_entry_invalid"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/sleep_until"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_until"/>
        <EditText android:id="@+id/edit_sleep_until_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/edit_sleep_until_hour"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"/>
        <EditText android:id="@+id/edit_sleep_until_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/edit_sleep_until_minute"
            />
        <TextView
            android:id="@+id/sleep_until_valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textColor="#d41243"
            android:text="@string/sleep_entry_invalid"/>
    </LinearLayout>

    <TextView
        android:id="@+id/slept_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slept_for"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit_sleep_data"
        android:onClick="onSubmit"/>
</LinearLayout>
